<resources>
    <string name="app_name">COP290 Registration</string>
    <string name="result_title">Result</string>
    <string name="teamname">Enter your team name</string>
    <string name="name1">Name of Member 1</string>
    <string name="name2">Name of Member 2</string>
    <string name="name3">Name of Member 3</string>
    <string name="entry1">Entry no. of Member 1</string>
    <string name="entry2">Entry no. of Member 2</string>
    <string name="entry3">Entry no. of Member 3</string>
    <string name="button_send">Register</string>
    <string name="shar">Share Success</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_main">About</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_about">About</string>
    <string name="made_by">Made By: \nMayank Rajoria(2014CS10233), \nPrakhar Gupta(2014CS10290), \nPrakhar Agrawal(2014CS10207)</string>
    <string name="return_to_regi">Go back to Registration Page</string>
    <string name="about_text">App helps users to register their teams to the http://agni.iitd.ernet.in/cop290/assign0/register/ server database.
\n\n\n
Along with the basic funtioning this app can also provide suggestions to users of CSE Department and autoset their entry no. if their name is known. It can also share the status on facebook.</string>
</resources>
