<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
    <!--tools:showIn="@layout/activity_my">-->
    <!--<AutoCompleteTextView android:id="@+id/entry1auto"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/entry1"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team Registration"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <AutoCompleteTextView android:id="@+id/team"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/teamname"/>

    <AutoCompleteTextView android:id="@+id/name1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name1" />

    <AutoCompleteTextView android:id="@+id/entry1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entry1" />

    <AutoCompleteTextView android:id="@+id/name2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name2" />

    <AutoCompleteTextView android:id="@+id/entry2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entry2" />

    <AutoCompleteTextView android:id="@+id/name3"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name3" />

    <AutoCompleteTextView android:id="@+id/entry3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entry3" />

    <Button android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:background="@drawable/button_border"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:onClick="register"/>

    <Button
        android:id="@+id/angry_btn"

        android:text="Button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5" />
</LinearLayout>


    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">-->

    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <!-- -->
    <!--<EditText-->
        <!--android:layout_width=""-->
        <!--android:layout_height="" />-->
<!--</RelativeLayout>-->
</ScrollView>